RESOLVED FIXED151889
[iOS] Do not exit fullscreen mode during auto-PiP.
https://bugs.webkit.org/show_bug.cgi?id=151889
Summary [iOS] Do not exit fullscreen mode during auto-PiP.
Jer Noble
Reported 2015-12-04 15:46:33 PST
[iOS] Do not exit fullscreen mode during auto-PiP.
Attachments
Patch (4.26 KB, patch)
2015-12-04 15:54 PST, Jer Noble
no flags
Jer Noble
Comment 1 2015-12-04 15:54:08 PST
WebKit Commit Bot
Comment 2 2015-12-04 15:54:55 PST
Attachment 266671 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1065: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1367: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2015-12-08 11:29:59 PST
Comment on attachment 266671 [details] Patch Clearing flags on attachment: 266671 Committed r193762: <http://trac.webkit.org/changeset/193762>
WebKit Commit Bot
Comment 4 2015-12-08 11:30:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.