[iOS] Do not exit fullscreen mode during auto-PiP. https://bugs.webkit.org/show_bug.cgi?id=151889

Reviewed by Darin Adler.

When auto-PiPing, do not exit fullscreen mode, as that causes a two-step animation upon returing from auto-PiP.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::applicationDidBecomeActive): Handle the case where we open Safari after an
    auto-PiP by clicking on a link; if so, hide the fullscreen window.
(WebVideoFullscreenInterfaceAVKit::didStartPictureInPicture): Do not exit fullscreen during auto-PiP.
(WebVideoFullscreenInterfaceAVKit::shouldExitFullscreenWithReason): Ditto.


Canonical link: https://commits.webkit.org/170148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193762 268f45cc-cd09-0410-ab3c-d52691b4dbfc